doc/console/console.tex

--- a/doc/console/console.tex
+++ b/doc/console/console.tex
@@ -42,6 +42,7 @@ in the command line:
 \noindent
 to select all vertices. By the way, in a similar way, all vertices are
 deselected:
+
 \begin{tcolorbox}
 deselect all vertices.
 \end{tcolorbox}
@@ -288,7 +289,7 @@ One can either connect one list of vertices to another, which, however, can be t
 The easier case is to use a standard way of connection, for example,
 
 \begin{tcolorbox}[colback=palegreen]
-  CONNECT upper lower MATCHING to matching
+  CONNECT upper lower MATCHING
 \end{tcolorbox}
 which produces a matching connecting the $i$th vertex of
 \texttt{list1} to the $i$th vertex of \texttt{list2}
