--- a/doc/manual/main.tex
+++ b/doc/manual/main.tex
@@ -143,16 +143,84 @@ EPM and code examples for how to use these.
 
 \section{Documentation and Installation}
 
-You can download Gralog from \url{www.gralog.org} (Change this)
+You can download Gralog from \url{https://github.com/gralog/gralog}.
 
-Gralog is written in Java and does not need special installation. Just
-run the jar file by
+First, make sure that Java version at least 10 is installed on your
+machine. (Currently, version 11 does not seem to work with Gralog.)
 
-[code, including where the jar file is]
+On Linux and Mac OS you can install it by
 
-or run Gralog directly from the source code by calling
+\begin{tcolorbox}
+  cd..
 
-[code: ./gradlew].
+  ./install-linux.sh
+\end{tcolorbox}
+
+This compiles Gralog in directory \texttt{~/gralog} (which is created
+if necessary) or in the directory you give the script as a parameter:
+
+\begin{tcolorbox}
+  ./install-linux.sh /path/to/gralog
+\end{tcolorbox}
+
+Then a symbolic link to the script starting Gralog is created in
+\texttt{/usr/bin}. For this, the installer asks the user for the admin
+password. If you do not have it, just give three times a wrong
+password: only the symbolic link part will be skipped.
+
+Furthermore, the installer tries to install Python modules \emph{networkx} and
+\emph{python-igraph} with \emph{pip}. If \emph{pip} is not installed,
+it tries to install it. If Python is not installed, the installation
+stops at this point (however, Python is installed by default on Linux
+machines and on Macs). If on your machine by default, \emph{networkx}
+and \emph{python-igraph} must be
+installed to a directory you do not have writing rights for, the
+installer asks for the \texttt{sudo} password.
+
+You can skip the installation of the Python part giving the installer
+parameter \texttt{-n} like this:
+
+\begin{tcolorbox}
+  ./install-linux.sh /path/to/gralog -n
+\end{tcolorbox}
+or
+\begin{tcolorbox}
+  ./install-linux.sh -n /path/to/gralog
+\end{tcolorbox}
+
+Finally, you can call the installer with parameter \texttt{-u}:
+
+\begin{tcolorbox}
+  ./install-linux.sh /path/to/gralog -u
+\end{tcolorbox}
+to let \emph{pip} try to install the modules locally. (This
+corresponds to calling \texttt{pip install --user <module>}.)
+
+On Windows Gralog is not tested yet. You can try to install it by
+running
+
+\begin{tcolorbox}
+  gradlew.bat
+\end{tcolorbox}
+in the Gralog root directory. This compiles Gralog if necessary and
+runs it. The \texttt{jar} file is
+\texttt{./build/dist/gralog-fx.jar}. Similarly, on Linux and Mac OS
+one can call
+\begin{tcolorbox}
+  ./gradlew
+\end{tcolorbox}
+
+
+On Windows and on newer Macs it is possible to call the jar file by
+just clicking on it.
+
+To use the python part on Windows, you have to install Python and the
+libraries \emph{networkx} and \emph{python-igraph} yourself. Then copy
+the file
+\texttt{./gralog-fx/src/main/java/gralog/gralogfx/piping/scripts/Gralog.py}
+to the directory with your Python script or somewhere where Python
+will find it.
+
 
 The documentation can be found in directory \texttt{doc/}. The main
 manual file is \texttt{gralog.pdf}. This part is additionally in the
