--- a/doc/manual/main.tex
+++ b/doc/manual/main.tex
@@ -146,55 +146,53 @@ EPM and code examples for how to use these.
 You can download Gralog from \url{https://github.com/gralog/gralog}.
 
 First, make sure that Java version at least 10 is installed on your
-machine. (Currently, version 11 does not seem to work with Gralog.)
+machine.
 
 On Linux and Mac OS you can install it by
 
 \begin{tcolorbox}
-  cd..
-
+  cd install
   ./install-linux.sh
 \end{tcolorbox}
 
-This compiles Gralog in directory \texttt{~/gralog} (which is created
-if necessary) or in the directory you give the script as a parameter:
+Call
+\begin{tcolorbox}
+  ./install-linux.sh -h
+\end{tcolorbox}
+to get help on the installer options. If the installation script
+didn't work for some reason, read below how to install Gralog manually.
+
+If option \texttt{-c} is given, the installer compiles Gralog in
+directory \texttt{~/gralog} (which is created if necessary) or in the directory you give the script as a parameter:
 
 \begin{tcolorbox}
-  ./install-linux.sh /path/to/gralog
+  ./install-linux.sh -d /path/to/gralog
 \end{tcolorbox}
 
-Then a symbolic link to the script starting Gralog is created in
-\texttt{/usr/bin}. For this, the installer asks the user for the admin
-password. If you do not have it, just give three times a wrong
-password: only the symbolic link part will be skipped.
+If run with option \texttt{-l}, a symbolic link to the script starting Gralog is created in
+\texttt{/usr/bin}. For this, the installer asks the user for the administrator
+password.
 
-Furthermore, the installer tries to install Python modules \emph{networkx} and
-\emph{python-igraph} with \emph{pip}. If \emph{pip} is not installed,
-it tries to install it. If Python is not installed, the installation
-stops at this point (however, Python is installed by default on Linux
-machines and on Macs). If on your machine by default, \emph{networkx}
-and \emph{python-igraph} must be
-installed to a directory you do not have writing rights for, the
-installer asks for the \texttt{sudo} password.
+By default (without option \texttt{-n}), the installer tries to
+install Python modules \emph{networkx} and \emph{python-igraph} with
+\emph{pip}. They are needed to be able to use Gralog's Python module
+\texttt{Gralog.py}, which allows the user to write Python scripts
+working with graphs and conveniently visualise and debug them using
+Gralog.
 
-You can skip the installation of the Python part giving the installer
-parameter \texttt{-n} like this:
+If \emph{pip} is not installed, the installer tries to install it. By
+default, \emph{pip} will try to install the modules locally. (This
+corresponds to calling \texttt{pip install --user <module>}.) If you
+want a system-wide installation of those modules, call the installer
+with option \texttt{-s}. This will demand administrator rights.
 
-\begin{tcolorbox}
-  ./install-linux.sh /path/to/gralog -n
-\end{tcolorbox}
-or
-\begin{tcolorbox}
-  ./install-linux.sh -n /path/to/gralog
-\end{tcolorbox}
+If
+Python is not installed, the installation stops at this point
+(however, Python is installed by default on Linux machines and on
+Macs). If on your machine by default, \emph{networkx} and
+\emph{python-igraph} must be installed to a directory you do not have
+writing rights for, the installer asks for the administrator password.
 
-Finally, you can call the installer with parameter \texttt{-u}:
-
-\begin{tcolorbox}
-  ./install-linux.sh /path/to/gralog -u
-\end{tcolorbox}
-to let \emph{pip} try to install the modules locally. (This
-corresponds to calling \texttt{pip install --user <module>}.)
 
 On Windows Gralog is not tested yet. You can try to install it by
 running
@@ -210,7 +208,6 @@ one can call
   ./gradlew
 \end{tcolorbox}
 
-
 On Windows and on newer Macs it is possible to call the jar file by
 just clicking on it.
 
@@ -223,9 +220,9 @@ will find it.
 
 
 The documentation can be found in directory \texttt{doc/}. The main
-manual file is \texttt{gralog.pdf}. This part is additionally in the
-file \texttt{external.pdf}. [TODO: make a general manual, include this
-text there.]
+manual file is \texttt{gralog.pdf}. 
+
+
 
 
 \input{console}
